[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "web-project-generator"
version = "1.0.0"
description = "Generate base structure of Web software projects with AI agent files"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Jafte Carneiro Fagundes da Silva"}
]
keywords = ["web", "project-generator", "ai-agents", "react", "typescript", "vite"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/jafte/dev_tools"
Repository = "https://github.com/jafte/dev_tools"

[tool.setuptools.packages.find]
include = ["dev_tools*"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v -x --tb=short"

[tool.mypy]
python_version = "3.8"
strict = false
ignore_missing_imports = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]

[tool.ruff.format]
quote-style = "double"
indent-width = 4
